--- a/examples/index.html
+++ b/examples/index.html
@@ -16,7 +16,7 @@
         <div class="text-5xl -rotate-45"></div>
     </div>
     <div id="jEditor"></div>
-    <script type="module" src="examples/demo.ts"></script>
+    <script type="module" src="./index.js"></script>
 </body>
 
 </html>
