--- a/examples/themes/index.html
+++ b/examples/themes/index.html
@@ -6,15 +6,10 @@
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>jEditor Themed Example</title>
+    <title>jEditor Themes Example</title>
 </head>
 
 <body>
-    <div class="hidden">
-        <!-- Styles needed here as they are dynamic and are not loaded by vite  -->
-        <div class="text-3xl rotate-45"></div>
-        <div class="text-5xl -rotate-45"></div>
-    </div>
     <div id="jEditor"></div>
     <script type="module">
         import { jEditor } from "src/index";
