--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
     <script type="module">
         import { jEditor } from "src/index";
 
-        import data from "./docs/examples/defaults/data";
-        import elements from "./docs/examples/defaults/elements";
-        import customActions from "./docs/examples/defaults/custom-actions";
+        import data from "./docs/examples/defaults/data.js";
+        import elements from "./docs/examples/defaults/elements.js";
+        import customActions from "./docs/examples/defaults/custom-actions.js";
 
         const editor = new jEditor(
             {
