--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             {
                 container: "#jEditor",
                 paperSize: "half-letter",
+                orientation: "landscape",
                 elements: elements,
                 title: `<a href='https://github.com/medic-plus/js-document-editor'>jEditor</a>`,
                 units: "in",
